# src/router/user_route.go
@@ -13,7 +13,7 @@ func UserRoutes(v1 fiber.Router, u service.UserService, t service.TokenService) 
 
 	user := v1.Group("/users")
 
-	user.Get("/", m.Auth(u, "getUsers"), userController.GetUsers)
+	user.Get("/paginated", m.Auth(u, "getUsers"), userController.GetUsersWithPagination)
 	user.Post("/", m.Auth(u, "manageUsers"), userController.CreateUser)
 	user.Get("/:userId", m.Auth(u, "getUsers"), userController.GetUserByID)
 	user.Patch("/:userId", m.Auth(u, "manageUsers"), userController.UpdateUser)
